2007-01-10  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-controlbar:
	* examples/hildon-controlbar/hildon-controlbar-example.c: Adding an
	example for the HildonControlBar.

	* src/hildon-banner.c: Fixing some refactoring bugs.

	* src/hildon-defines.c:
	* src/hildon-number-editor.c:
	* src/hildon-time-editor.c:
	* src/hildon-time-picker.c: Gtk 2.10 fixes.

2007-01-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-date-editor.c:
	* src/hildon-date-editor.h:
	* src/hildon-time-editor.c:
	* src/hildon-time-editor.h: Cleaning up the enum name.

2007-01-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-wizard-dialog-private.h:
	* src/hildon-wizard-dialog.c:
	* src/hildon-wizard-dialog.h: Cleaning up the HildonWizardDialog.

2007-01-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-set-password-dialog-private.h:
	* src/hildon-set-password-dialog.c:
	* src/hildon-set-password-dialog.h: Cleaning up the
	HildonSetPasswordDialog.

2007-01-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-get-password-dialog-private.h:
	* src/hildon-get-password-dialog.c:
	* src/hildon-get-password-dialog.h: Cleaning up the
	HildonGetPasswordDialog.

2007-01-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-font-selection-dialog.c:
	* src/hildon-font-selection-dialog.h:
	* src/hildon-font-selection-dialog-private.h: Cleaning up the
	HildonFontSelectionDialog. 

2007-01-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-login-dialog.c:
	* src/hildon-login-dialog.h:
	* src/Makefile.am:
	* src/hildon-login-dialog-private.h:
	* src/hildon-widgets.h: Cleaning up the HildonNamePassword dialog and
	renaming it to HildonLoginDialog.

2007-01-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c: Introducing static protos, removing the