@@ -5,7 +5,8 @@ noinst_PROGRAMS				= hildon-window-example 	\
 					  hildon-caption-example	\
 					  hildon-weekday-picker-example \
 					  hildon-sort-dialog-example	\
-					  hildon-controlbar-example
+					  hildon-controlbar-example	\
+					  hildon-note-example
 
 # HIldon window
 hildon_window_example_LDADD		= $(HILDON_WIDGETS_OBJ_LIBS)
@@ -36,4 +37,9 @@ hildon_sort_dialog_example_SOURCES	= hildon-sort-dialog/hildon-sort-dialog-examp
 hildon_controlbar_example_LDADD		= $(HILDON_WIDGETS_OBJ_LIBS)
 hildon_controlbar_example_CFLAGS	= $(HILDON_WIDGETS_OBJ_CFLAGS)
 hildon_controlbar_example_SOURCES	= hildon-controlbar/hildon-controlbar-example.c
+
+# Hildon note example
+hildon_note_example_LDADD		= $(HILDON_WIDGETS_OBJ_LIBS)
+hildon_note_example_CFLAGS		= $(HILDON_WIDGETS_OBJ_CFLAGS)
+hildon_note_example_SOURCES		= hildon-note/hildon-note-example.c
 
